force-app/main/default/objects/Onboarding__c/fields/Activation_date__c.field-meta.xml
<CustomField>
    <fullName>Activation_date__c</fullName>
    <label>Expected activation date</label>
    <type>Date</type>
</CustomField>