force-app/main/default/objects/Onboarding__c/fields/ActivationUsage__c.field-meta.xml
<CustomField>
    <fullName>ActivationUsage__c</fullName>
    <label>Activation/Usage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>