force-app/main/default/objects/Onboarding__c/fields/Completed_activation_date__c.field-meta.xml
<CustomField>
    <fullName>Completed_activation_date__c</fullName>
    <label>Completed evaluation/follow up date</label>
    <type>Date</type>
</CustomField>