force-app/main/default/objects/Onboarding__c/fields/Completed_implementation_date__c.field-meta.xml
<CustomField>
    <fullName>Completed_implementation_date__c</fullName>
    <label>Completed education/introduction date</label>
    <type>Date</type>
</CustomField>