force-app/main/default/objects/Onboarding__c/fields/Completed_registration_date__c.field-meta.xml
<CustomField>
    <fullName>Completed_registration_date__c</fullName>
    <label>Completed registration/activation date</label>
    <type>Date</type>
</CustomField>