force-app/main/default/objects/Onboarding__c/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM?</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This user is not marked as a Customer Succes Manager</errorMessage>
        <filterItems>
            <field>User.CSM__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>