force-app/main/default/objects/Onboarding__c/fields/Implementation_date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_date__c</fullName>
    <label>Expected implementation date</label>
    <type>Date</type>
</CustomField>