force-app/main/default/objects/Onboarding__c/fields/Implementation_needed__c.field-meta.xml
<CustomField>
    <fullName>Implementation_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation needed?</label>
    <type>Checkbox</type>
</CustomField>