force-app/main/default/objects/Onboarding__c/fields/Manual_date__c.field-meta.xml
<CustomField>
    <fullName>Manual_date__c</fullName>
    <label>Manual date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>