force-app/main/default/objects/Onboarding__c/fields/Registration_date__c.field-meta.xml
<CustomField>
    <fullName>Registration_date__c</fullName>
    <label>Expected registration date</label>
    <type>Date</type>
</CustomField>