force-app/main/default/objects/Onboarding__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration_Activation</fullName>
                <label>Registration / Activation</label>
            </value>
            <value>
                <fullName>Introduction_Education</fullName>
                <label>Introduction / Education</label>
            </value>
            <value>
                <fullName>Evaluation_Follow up</fullName>
                <label>Evaluation / Follow up</label>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>