force-app/main/default/objects/Onboarding__c/fields/Video_Tutorial__c.field-meta.xml
<CustomField>
    <fullName>Video_Tutorial__c</fullName>
    <label>Video Tutorial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>