force-app/main/default/objects/Onboarding__c/fields/Visit_Online_Physical__c.field-meta.xml
<CustomField>
    <fullName>Visit_Online_Physical__c</fullName>
    <label>Visit (Online / Physical)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>