force-app/main/default/objects/Onboarding__c/validationRules/StageChange.validationRule-meta.xml
<ValidationRule>
    <fullName>StageChange</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Stages__c,&apos;Completed&apos;), $User.CSM__c != true)</errorConditionFormula>
    <errorDisplayField>Stages__c</errorDisplayField>
    <errorMessage>Only the Customer Success Manager can change the status to Completed</errorMessage>
</ValidationRule>